fixed filter dropdown margins on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -88,6 +88,10 @@
   }
   body {
     @apply bg-background text-foreground;
+    overflow-x: visible;
+  }
+  html {
+    overflow-x: hidden;
   }
 }
 
